Poprawione wyswietlanie i zapis do pliku.

--- a/korpo2/korpo2.vcxproj
+++ b/korpo2/korpo2.vcxproj
@@ -74,6 +74,7 @@
     <ClCompile Include="Plan.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Wyswietlacz.cpp" />
+    <ClCompile Include="Zadanie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Data.h" />
