--- a/korpo2/korpo2.vcxproj.filters
+++ b/korpo2/korpo2.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Wyswietlacz.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Zadanie.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Data.h">
