--- a/korpo2/korpo2.vcxproj
+++ b/korpo2/korpo2.vcxproj
@@ -88,6 +88,10 @@
     <ClInclude Include="Wyswietlacz.h" />
     <ClInclude Include="Zadanie.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
